--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
+aiohttp==3.8.3
+aiosignal==1.2.0
+async-timeout==4.0.2
+asyncio==3.4.3
+attrs==22.1.0
 bcrypt==4.0.0
 blinker==1.5
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==3.0.0
 Flask-WTF==1.0.1
+frozenlist==1.3.1
 greenlet==1.1.3
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+multidict==6.0.2
 psycopg2-binary==2.9.4
+pyxivapi==0.5.1
+requests==2.28.1
 SQLAlchemy==1.4.41
+urllib3==1.26.12
 Werkzeug==2.2.2
 WTForms==3.0.1
+yarl==1.8.1
